# hermes

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  yoyo.ini
airflow/: packages.txt  requirements.txt
airflow/dags/: exampledag.py
airflow/dags/include/operators/: kafka.py
airflow/dags/kafka_listener/: __init__.py
airflow/dags/kafka_listener_v2/: __init__.py
airflow/dags/report_generation/: __init__.py  report_factory.py
airflow/include/reports/: test.csv
config/: gunicorn_config.py
migrations/: 20240401_01_S0mT5-create-users-table.py  20240527_01_7NG6b-create-users-table.py  20240527_02_P0EDn-create-reporting-tables.py  20240527_03_npNzg-reporting-seed-data.py  20240630_01_4puTt-add-scheduled-reports.py
src/: app.py  config.py
src/db/: connection.py  schedules.py  stores.py  users.py
src/helpers/: acl.py  auth.py  cache.py  kafka.py  report_factory.py
src/schemas/: report_config.py  user.py
src/static/: acl.yaml
src/tasks/: __init__.py  app.py
src/views/: __init__.py  auth.py  reports.py  stores.py
